# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(tictactoe)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
# add_subdirectory(regularpolygons)
# add_subdirectory(asteroids)


#--------------------------------------ATIVIDADE 01 ---------------------------------------------------------------
# add_subdirectory(pegue-o-ponto)



#--------------- modelos 3D ----------------------------
# add_subdirectory(loadmodel)
# add_subdirectory(lookat)
# add_subdirectory(viewer1)

#-------------------------------------ATIVIDADE 02 ----------------------------------------------------------------
add_subdirectory(viewer2)