# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(tictactoe)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
# add_subdirectory(regularpolygons)
# add_subdirectory(asteroids)


#--------------------------------------ATIVIDADE 01 ---------------------------------------------------------------
# add_subdirectory(pegue-o-ponto)



#--------------- modelos 3D ----------------------------
# add_subdirectory(loadmodel)
# add_subdirectory(lookat)
# add_subdirectory(viewer1)

#-------------------------------------ATIVIDADE 02 ----------------------------------------------------------------
# add_subdirectory(viewer2)

#------------------------- modelos 3D com iluminação/texturas ------------------------------------------------------
# add_subdirectory(viewer3)
# add_subdirectory(viewer4)
# add_subdirectory(viewer5)
# add_subdirectory(viewer6)
# add_subdirectory(viewer7)

#-------------------------------------ATIVIDADE 03 ----------------------------------------------------------------
add_subdirectory(atividade03)